--- a/arch/arm64/boot/dts/rockchip/rk3328.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3328.dtsi
@@ -1186,6 +1186,17 @@
 		      (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_HIGH)>;
 	};
 
+        rng: rng@ff060000 {
+                compatible = "rockchip,cryptov1-rng";
+                reg = <0x0 0xff060000 0x0 0x4000>;
+
+                clocks = <&cru SCLK_CRYPTO>, <&cru HCLK_CRYPTO_SLV>;
+                clock-names = "clk_crypto", "hclk_crypto";
+                assigned-clocks = <&cru SCLK_CRYPTO>, <&cru HCLK_CRYPTO_SLV>;
+                assigned-clock-rates = <150000000>, <100000000>;
+                status = "okay";
+        };
+
 	pinctrl: pinctrl {
 		compatible = "rockchip,rk3328-pinctrl";
 		rockchip,grf = <&grf>;
