Add beikeyun/l1pro dts

--- a/arch/arm64/boot/dts/rockchip/Makefile
+++ b/arch/arm64/boot/dts/rockchip/Makefile
@@ -24,6 +24,13 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-a1.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-evb.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-nanopi-r2s.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-rock64.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-beikeyun-1296mhz.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-beikeyun-1200mhz.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-beikeyun-1392mhz.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-beikeyun-1512mhz.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-l1pro-1296mhz.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-l1pro-1392mhz.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-l1pro-1512mhz.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-rock-pi-e.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-roc-pc.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3328-roc-cc.dtb
