--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -83,4 +83,13 @@ dtb-$(CONFIG_ARCH_MESON) += meson-sm1-x96-air-1000.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-sei610.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-x96-air-100.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-x96-air-1000.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-x96-max-plus.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-x96-max-plus-oc.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-x96-max-plus-100m.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-h96-max-x3.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-h96-max-x3-oc.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-hk1box-vontar-x3.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-hk1box-vontar-x3-oc.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-ugoos-x3.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-ugoos-x3-oc.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-a1-ad401.dtb
