--- a/arch/arm64/boot/dts/amlogic/meson-g12b-s922xj.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-g12b-s922xj.dtsi
@@ -152,7 +152,9 @@
 		};
 	};
 
-        gpu_opp_table: gpu-opp-table {
+	/delete-node/ opp-table-gpu;
+
+        gpu_opp_table: opp-table-gpu {
                 compatible = "operating-points-v2";
 
                 opp-124999998 {
