Update sfe Kconfig & Makefile & code

--- a/drivers/net/ethernet/qualcomm/sfe/fast-classifier/Makefile
+++ b/drivers/net/ethernet/qualcomm/sfe/fast-classifier/Makefile
@@ -1,9 +1,10 @@
+#
+## Makefile for Fast classifier
+#
 obj-m += fast-classifier.o
 
-ifeq ($(SFE_SUPPORT_IPV6),)
-SFE_SUPPORT_IPV6=y
+ifeq ($(CONFIG_SFE_SUPPORT_IPV6),y)
+    ccflags-$(CONFIG_SFE_SUPPORT_IPV6) += -DSFE_SUPPORT_IPV6
 endif
 
-ccflags-$(SFE_SUPPORT_IPV6) += -DSFE_SUPPORT_IPV6
 ccflags-y += -I$(obj)/../shortcut-fe
-obj ?= .
