--- a/drivers/net/ethernet/qualcomm/Kconfig
+++ b/drivers/net/ethernet/qualcomm/Kconfig
@@ -67,21 +67,25 @@ config SHORTCUT_FE
 	select NF_CONNTRACK_CHAIN_EVENTS
 	help
 	  This driver provides support for accelerated "shortcut" packet forwarding.
-	  The module will be called sfe.
+	  The module will be called shortcut-fe.
 
 config SFE_SUPPORT_IPV6
 	bool "Shortcut Forwarding Engine support IPV6"
 	default y
 	depends on SHORTCUT_FE
-
-config SFE_ECM
-	bool "SFE_ECM"
-	default y
-	depends on SHORTCUT_FE
+	help
+	  The module will be called shortcut-fe-ipv6.
 
 config FAST_CLASSIFIER
 	bool "Fast Classifier"
 	default y
+	depends on SHORTCUT_FE
+	help
+	  The module will be called fast-classifier.
+
+config SFE_ECM
+	bool "Enable qca-nss-ecm support for shortcut-fe"
+	default n
 	depends on SHORTCUT_FE
 
 source "drivers/net/ethernet/qualcomm/rmnet/Kconfig"
