ARM64: dts: meson: optimization dts files

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -97,6 +97,8 @@ dtb-$(CONFIG_ARCH_MESON) += meson-sm1-hk1box-vontar-x3.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-hk1box-vontar-x3-oc.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-ugoos-x3.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-ugoos-x3-oc.dtb
-dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3.dtb
-dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-oc.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-bz.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-bz-oc.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-qz.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-qz-oc.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-a1-ad401.dtb
