--- a/arch/arm64/boot/dts/amlogic/meson-sm1-x96-max-plus.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-x96-max-plus.dts
@@ -196,6 +196,9 @@
 
 /* SDIO */
 &sd_emmc_a {
+	/delete-property/ sd-uhs-sdr104;
+	sd-uhs-sdr12;
+	sd-uhs-sdr25;
 	sd-uhs-sdr50;
 	max-frequency = <100000000>;
 
