--- a/arch/arm64/boot/dts/amlogic/meson-sm1-hk1box-vontar-x3.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-hk1box-vontar-x3.dts
@@ -190,18 +190,27 @@
 
 /* SDIO */
 &sd_emmc_a {
-	/delete-property/ sd-uhs-sdr104;
-	sd-uhs-sdr12;
-	sd-uhs-sdr25;
-	sd-uhs-sdr50;
-	max-frequency = <100000000>;
+	///delete-property/ sd-uhs-sdr104;
+	//sd-uhs-sdr12;
+	//sd-uhs-sdr25;
+	//sd-uhs-sdr50;
+	//max-frequency = <100000000>;
 
         //sd-uhs-ddr50;
 	//max-frequency = <50000000>;
 
-	//sd-uhs-sdr104;
-	//max-frequency = <200000000>;
+	sd-uhs-sdr104;
+	max-frequency = <200000000>;
 };
+
+/* Begin: fix hcy6355 wifi module problem */
+&sdio_pins {
+	mux {
+		/delete-property/ bias-disable;
+		bias-pull-up;
+	};
+};
+/* End: fix hcy6355 wifi module problem */
 
 /* SD card */
 &sd_emmc_b {
