--- a/fs/ksmbd/Kconfig
+++ b/fs/ksmbd/Kconfig
@@ -43,6 +43,16 @@ config SMB_SERVER
 	  smb3 encryption, copy-offload, secure per-user session
 	  establishment via NTLM or NTLMv2.
 
+config SMB_INSECURE_SERVER
+        bool "Support for insecure SMB1/CIFS and SMB2.0 protocols"
+        depends on SMB_SERVER && INET
+        select NLS
+	default n
+
+        help
+	  This enables deprecated insecure protocols dialects: SMB1/CIFS
+	  and SMB2.0
+
 config SMB_SERVER_SMBDIRECT
 	bool "Support for SMB Direct protocol"
 	depends on SMB_SERVER=m && INFINIBAND && INFINIBAND_ADDR_TRANS || SMB_SERVER=y && INFINIBAND=y && INFINIBAND_ADDR_TRANS=y
