arm64: amlogic: dts: fix memory size for some tvbox

--- a/arch/arm64/boot/dts/amlogic/meson-sm1-h96-max-x3.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-h96-max-x3.dts
@@ -15,6 +15,11 @@
 	compatible = "amlogic,sm1";
 	model = "H96 Max X3";
 
+	memory@0 {
+		device_type = "memory";
+		reg = <0x0 0x0 0x0 0xFFFFFFFF>;
+	};
+
 	sound {
 		compatible = "amlogic,axg-sound-card";
 		model = "H96-MAX";
