arm64: amlogic: dts: enable bluetooth for x96maxplus v5.1

--- a/arch/arm64/boot/dts/amlogic/meson-sm1-x96-max-plus.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-x96-max-plus.dts
@@ -177,7 +177,7 @@
 	pinctrl-names = "default";
 	uart-has-rtscts;
 
-	bluetooth {
+	bluetooth: bluetooth {
 		compatible = "realtek,rtl8822cs-bt";
 		interrupt-parent = <&gpio_intc>;
 		interrupts = <95 IRQ_TYPE_LEVEL_HIGH>;
