--- a/arch/arm64/boot/dts/amlogic/meson-sm1-x96-max-plus.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-x96-max-plus.dts
@@ -111,10 +111,12 @@
 
 	pinctrl-0 = <&eth_pins>, <&eth_rgmii_pins>;
 	pinctrl-names = "default";
-	phy-mode = "rgmii-txid";
 	phy-handle = <&external_phy>;
 
-	rx-internal-delay-ps = <800>;
+	//phy-mode = "rgmii-txid";
+	//rx-internal-delay-ps = <800>;
+	phy-mode = "rgmii";
+	amlogic,tx-delay-ns = <2>;
 
 	snps,aal;
 	snps,rxpbl = <0x8>;
@@ -136,7 +138,7 @@
 		reg = <0>;
 		max-speed = <1000>;
 
-		reset-assert-us = <10000>;
+		reset-assert-us = <30000>;
 		reset-deassert-us = <80000>;
 		reset-gpios = <&gpio GPIOZ_15 (GPIO_ACTIVE_LOW | GPIO_OPEN_DRAIN)>;
 
