--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -119,3 +119,4 @@ dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-bz-oc.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-qz.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-sm1-tx3-qz-oc.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-a1-ad401.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905x-tx9.dtb
