Adjust network settings for H96-MAX-X3

--- a/arch/arm64/boot/dts/amlogic/meson-sm1-h96-max-x3.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-h96-max-x3.dts
@@ -171,10 +171,12 @@
 
 	pinctrl-0 = <&eth_pins>, <&eth_rgmii_pins>;
 	pinctrl-names = "default";
-	phy-mode = "rgmii-txid";
+	//phy-mode = "rgmii-txid";
+	phy-mode = "rgmii";
+	amlogic,tx-delay-ns = <2>;
 	phy-handle = <&external_phy>;
 
-	rx-internal-delay-ps = <800>;
+	//rx-internal-delay-ps = <800>;
 
 	snps,aal;
 	snps,rxpbl = <0x8>;
