--- a/arch/arm64/boot/dts/amlogic/meson-sm1-h96-max-x3.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-h96-max-x3.dts
@@ -293,6 +293,23 @@
 };
 
 &cpu_opp_table {
+	opp-100000000 {
+		status = "disabled";
+	};
+
+	opp-250000000 {
+		status = "disabled";
+	};
+
+	opp-500000000 {
+		status = "disabled";
+	};
+
+	opp-750000000 {
+		opp-hz = /bits/ 64 <750000000>;
+		opp-microvolt = <750000>;
+	};
+
 	opp-2016000000 {
 		opp-hz = /bits/ 64 <2016000000>;
 		opp-microvolt = <1000000>;
