arm64: dts: amlogic: Add gxl x96w

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -73,6 +73,7 @@ dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905l3b-e900v22e.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905l2-ipbs9505.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s805x-p241.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905w-p281.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905w-x96w.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905w-x96-mini.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905l3b-m302a.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-gxl-s905w-tx3-mini.dtb
