--- a/drivers/auxdisplay/Makefile
+++ b/drivers/auxdisplay/Makefile
@@ -14,4 +14,5 @@ obj-$(CONFIG_HT16K33)		+= ht16k33.o
 obj-$(CONFIG_PARPORT_PANEL)	+= panel.o
 obj-$(CONFIG_LCD2S)		+= lcd2s.o
 obj-$(CONFIG_TM1628)            += tm1628.o
+obj-$(CONFIG_FD6551)        += fd6551.o
 obj-$(CONFIG_OPENVFD)           += openvfd/
