pinctrl: meson: add pinctrl driver support for Meson-SC2 Soc
Add new pinctrl driver for Amlogic's Meson-SC2 SoC.

Signed-off-by: Heiner Kallweit <hkallweit1@gmail.com>

--- a/drivers/pinctrl/meson/Kconfig
+++ b/drivers/pinctrl/meson/Kconfig
@@ -61,4 +61,10 @@ config PINCTRL_MESON_A1
 	select PINCTRL_MESON_AXG_PMX
 	default y
 
+config PINCTRL_MESON_SC2
+	tristate "Meson sc2 Soc pinctrl driver"
+	depends on ARM64
+	select PINCTRL_MESON_AXG_PMX
+	default y
+	
 endif
