--- a/arch/arm64/boot/dts/amlogic/meson-sm1-hk1box-vontar-x3.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-hk1box-vontar-x3.dts
@@ -94,15 +94,11 @@
 		status = "okay";
 		sys_led {
 			label = "sys_led";
-			gpios = <0x75 0x0b 0x00>;
+			gpios = <&gpio_ao GPIOAO_11 GPIO_ACTIVE_HIGH>;
 			default-state = "on";
 			linux,default-trigger = "default-on";
 		};
 	};
-};
-
-&gpio_ao {
-	phandle = <117>;
 };
 
 &vddcpu {
