--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -22,13 +22,13 @@ dtb-$(CONFIG_ARCH_MESON) += meson-g12b-gtking-pro-rev_a.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-gtking-pro-rev_a-oc.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-ali-ct2000.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-a311d-khadas-vim3.dtb
-dtb-$(CONFIG_ARCH_MESON) += meson-g12b-a311d-onethingcloud-oes.dtb
-dtb-$(CONFIG_ARCH_MESON) += meson-g12b-a311d-onethingcloud-oes-rgmii-rx-delay-3000ps.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-g12b-a311d-oes.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-g12b-a311d-oes-00050000.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-s922x-khadas-vim3.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-g12b-s922x-oes-plus.dtb
+dtb-$(CONFIG_ARCH_MESON) += meson-g12b-s922x-oes-plus-00050000.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-odroid-n2.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-odroid-n2-plus.dtb
-dtb-$(CONFIG_ARCH_MESON) += meson-g12b-oes-plus.dtb
-dtb-$(CONFIG_ARCH_MESON) += meson-g12b-oes-plus-v21.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-radxa-zero2.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-ugoos-am6.dtb
 dtb-$(CONFIG_ARCH_MESON) += meson-g12b-ugoos-am6-plus.dtb
